Remove unnecessary code and improve code clarity
The unnecessary classes and methods used in the code have been removed to improve the performance efficiency. Redundant checks have been eliminated and the code clarity has been enhanced for better readability and maintainability. A new feature to calculate mode matrix maps has been implemented.